# easytree

./: README.md
include/easytree/: breadth_first  depth_first  tree
src/: breadth_first.hpp  declaration.hpp  depth_first.hpp  iterator.hpp  node.hpp
test/: CMakeLists.txt  easytree.cpp
